--- a/index.html
+++ b/index.html
@@ -386,7 +386,22 @@
     </footer>
       <div class="back-to-top">
         <i class="fa fa-arrow-up"></i>
-        
+        <div id="lv-container" data-id="city" data-uid="MTAyMC8zNzM0MS8xMzg3NQ==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+</div>
       </div>
   </div>
 <script type="text/javascript">
@@ -403,5 +418,6 @@
   <script type="text/javascript" src="/js/src/utils.js?v=5.1.4"></script>
   <script type="text/javascript" src="/js/src/motion.js?v=5.1.4"></script>
   <script type="text/javascript" src="/js/src/bootstrap.js?v=5.1.4"></script>
+  
 <script src="/live2dw/lib/L2Dwidget.min.js?0c58a1486de42ac6cc1c59c7d98ae887"></script><script>L2Dwidget.init({"pluginJsPath":"lib/","pluginModelPath":"assets/","pluginRootPath":"live2dw/"});</script></body>
 </html>
