--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       </div>
     </footer>
       <div class="back-to-top">
-        <i class="fa fa-arrow-up"></i>
+        <i class="fa fa-arrow-up">来比例</i>
         <div id="lv-container" data-id="city" data-uid="MTAyMC8zNzM0MS8xMzg3NQ==">
 	<script type="text/javascript">
    (function(d, s) {
