--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 </div>
   <div class="powered-by">由 <a class="theme-link" target="_blank" href="https://hexo.io">Hexo</a> 强力驱动</div>
   <span class="post-meta-divider">|</span>
-  <div class="theme-info">主题 &mdash; <a class="theme-link" target="_blank" href="https://github.com/iissnan/hexo-theme-next">NexT.Muse</a> v5.1.4</div>
+  <div class="theme-info">主题tttt &mdash; <a class="theme-link" target="_blank" href="https://github.com/iissnan/hexo-theme-next">NexT.Muse</a> v5.1.4</div>
       </div>
     </footer>
       <div class="back-to-top">
-        <i class="fa fa-arrow-up">来比例</i>
+        <i class="fa fa-arrow-up">来比例tt</i>
         <div id="lv-container" data-id="city" data-uid="MTAyMC8zNzM0MS8xMzg3NQ==">
 	<script type="text/javascript">
    (function(d, s) {
